# autonomous-incident-resolution-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  plan.md  plan2.md  plan3.md  pyproject.toml
.claude/: settings.json
docs/: API_TESTING.md  DEPLOYMENT.md  test.json
frontend/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/backend/: .env.example  README.md  requirements.txt
frontend/src/: App.css  App.jsx  api.js  mockGithubData.js
genaihub_startercode-main/: .gitignore  README.md
genaihub_startercode-main/GenAI Hub Starter/: .env.example  Cert-Solution-Windows.ps1  README.md  all_model.txt  cert.py  chatopenai_test_llm.py  embedding.py  fix_ssl_linux.sh  fix_ssl_macos.sh  langgraph-multitool-agent 2.ipynb  llama_chat.py  openai_test.py  requirements.txt
llm/: docker-compose.yml
scripts/: aks-connect.sh  migrate.sh  publish-sample-alert.py  run-alert-consumer.sh  run-api.sh  run-e2e-kafka.sh  run-temporal-worker.sh  verify.sh
src/airp/: __init__.py  main.py
tests/fixtures/: rca_scenarios.json
tests/integration/: test_backend_services.py  test_backend_smoke.py
tests/unit/: test_agent_persistence.py  test_agents.py  test_alert_ingestion_service.py  test_alertmanager.py  test_allowlists_and_retries.py  test_entra_jwt_validator.py  test_event_contracts.py  test_eventhub_kafka.py  test_evidence_clients.py  test_llm_gateway_selection.py  test_policy_and_idempotency.py  test_rca_safety.py  test_redaction.py  test_security_roles.py  test_slack_client.py  (+2 more)
(+109 files in other folders)
