[project]
name = "airp-backend"
version = "0.1.0"
description = "Backend API for the Autonomous Incident Resolution Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "asyncpg>=0.29",
    "confluent-kafka>=2.5",
    "fastapi>=0.115,<0.116",
    "httpx>=0.27",
    "openai>=1.50",
    "opentelemetry-api>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-sdk>=1.27",
    "pgvector>=0.3",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "pyjwt[crypto]>=2.9",
    "redis>=5.0",
    "sqlalchemy[asyncio]>=2.0",
    "starlette>=0.37.2,<0.39",
    "structlog>=24.4",
    "temporalio>=1.7",
    "tenacity>=9.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
